# creative-claw

./: .env.template  .gitignore  LICENSE  README.md  README_zh.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.webchat-model3d.config.js  vite.webchat-pptx-preview.config.js  vite.webchat-tldraw.config.js
conf/: app_config.py  llm.py  openai_codex.py  schema.py
conf/jsons/: agent.json
docs/: development.md  expert_model_capability_map_zh.md  model_and_token_map.md  ppt_product_architecture.md
evals/creative_claw_orchestrator/: adk_eval_config.json  design_product_cases.json  design_product_live_evalset.json  design_resource_selection_calibration.json
input/test_media/: spoken_words_10s.webm  spoken_words_full.webm
scripts/: run_design_orchestrator_live_eval.py  run_design_orchestrator_live_route_check.py  run_orchestrator_structured_output_smoke.py  run_ppt_product_smoke.py  run_runtime_ppt_hitl_provider_smoke.py
skills/design-knowledge-and-skills/: SKILL.md  resource-index.md  resource-manifest.json
skills/expert-usage-guide/: SKILL.md
skills/product-design-skills/: readme.md
skills/product-page-skills/: readme.md
skills/product-ppt-skills/: readme.md
src/: chat_runner.py  creative_claw_cli.py  logger.py
src/channels/: feishu.py  web.py
src/productions/: __init__.py  schema_utils.py
src/runtime/: adk_compat.py  agent_tool_transport.py  cancellation.py  code_artifacts.py  expert_dispatcher.py  expert_registry.py  interaction_language.py  llm_oneshot.py  process_sessions.py  product_protocol.py  product_results.py  progress_events.py  runtime_trace.py  step_events.py  usage_logging.py  workflow_service.py  workspace.py
src/tools/: builtin_tools.py
unit_test/: ppt_runtime_smoke_helpers.py  test_adk_compat.py  test_adk_resumability.py  test_agent_tool_transport.py  test_anything_to_md_expert.py  test_app_config.py  test_audio_generation_experts.py  test_basic_operations_experts.py  test_code_generation_expert.py  test_creative_claw_cli.py  test_design_artifact_validation.py  test_design_knowledge_resources.py  test_design_live_eval_assets.py  test_design_orchestrator_eval_cases.py  test_design_product_manager.py  test_design_product_tool.py  test_design_resource_selection_calibration.py  test_design_schema_validation.py  test_design_systems.py  test_exec_command_cancel.py  test_expert_cards.py  test_expert_dispatcher.py  test_expert_schema_utils.py  test_image_editing_agent.py  test_image_expert_providers.py  test_image_grounding_agent.py  test_image_search_agent.py  test_image_segmentation_agent.py  test_image_understanding.py  test_image_understanding_agent.py  test_llm_oneshot.py  test_new_expert_agents.py  test_openai_codex_llm.py  test_orchestrator.py  test_orchestrator_cancellation.py  test_page_product_manager.py  test_page_product_tool.py  test_ppt_html_route.py  test_ppt_product_manager.py  test_ppt_product_tool.py  (+17 more)
(+457 files in other folders)
