[tool.poetry]
name = "creative-claw"
version = "0.2.0"
description = "A creative AI agent for image generation, prompt refinement, visual understanding, and multi-channel chat."
authors = ["GML <mail@yxy.pub>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "conf" },
]
include = ["conf/jsons/*.json", "skills/**/*", "src/webchat/static/**/*"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
google-genai = ">=0.6.0"
google-adk = "^1.29.0"
pydantic = "^2.7.0"
requests = "^2.31.0"
pillow = "^10.3.0"
pycocotools = "^2.0.8"
loguru = "^0.7.2"
litellm = ">=1.0.0"

# Tools
dashscope = ">=1.20.7"
httpx = {extras = ["socks"], version = ">=0.27.0"}
requests-toolbelt = ">=1.0.0"
openai = ">=1.16.0"
asyncddgs = "==0.1.0a1"
lark-oapi = ">=1.4.13"
websockets = ">=12.0"
volcengine-python-sdk = {extras = ["ark"], version = "*"}
tencentcloud-sdk-python = ">=3.1.76"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
creative-claw = "src.creative_claw_cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
