[tool.poetry]
name = "creative-claw"
version = "0.4"
description = "A creative AI agent for image generation, prompt refinement, visual understanding, and multi-channel chat."
authors = ["GML <mail@yxy.pub>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
    { include = "conf" },
]
include = [
    "conf/jsons/*.json",
    "skills/**/*",
    "src/webchat/static/**/*",
    "src/productions/design/design-systems/**/*",
    "src/productions/design/frames/**/*",
    "src/productions/design/design_product_manager/schemas/*.json",
    "src/productions/page/page_product_manager/templates-html/**/*",
    "src/productions/ppt/templates/svg/**/*",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
google-genai = ">=0.6.0"
google-adk = "^1.29.0"
pydantic = "^2.7.0"
requests = "^2.31.0"
pillow = ">=10.3.0"
PyMuPDF = ">=1.24.0"
python-pptx = ">=1.0.0"
openpyxl = ">=3.1.0"
mammoth = ">=1.8.0"
beautifulsoup4 = ">=4.12.0"
markdownify = ">=0.13.0"
pycocotools = "^2.0.8"
loguru = "^0.7.2"
litellm = ">=1.0.0"
jsonschema = "^4.23.0"

# Tools
dashscope = ">=1.20.7"
httpx = {extras = ["socks"], version = ">=0.27.0"}
oauth-cli-kit = ">=0.1.3,<1.0.0"
requests-toolbelt = ">=1.0.0"
openai = ">=1.16.0"
asyncddgs = "==0.1.0a1"
lark-oapi = ">=1.4.13"
websockets = ">=12.0"
volcengine-python-sdk = {extras = ["ark"], version = "*"}
tencentcloud-sdk-python = ">=3.1.76"
markitdown = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
creative-claw = "src.creative_claw_cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
